openshift/ACM/ocpvirt/idm-ldap/idm-ldap.yaml
kind: Service
apiVersion: v1
metadata:
  name: idm-ldap
  namespace: openshift-vms
spec:
  ports:
    - name: ssh
      protocol: TCP
      port: 22
      targetPort: 22
    - name: cokpit
      protocol: TCP
      port: 9090
      targetPort: 9090
    - name: ldap
      protocol: TCP
      port: 389
      targetPort: 389
    - name: ldap-https
      protocol: TCP
      port: 636
      targetPort: 636
  selector:
    kubevirt.io/domain: idm-ldap

---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: idm-ldap
  namespace: openshift-vms
spec:
  host: idm.apps.ocp.drkspace.fr
  to:
    kind: Service
    name: idm-ldap
    weight: 100
  port:
    targetPort: cokpit
  tls:
    termination: passthrough
  wildcardPolicy: None
